--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <div class="icn-favorite">
                                     <div class="heart-container">
                                         <i class="fa-regular fa-heart fa-2x fav-heart--black"></i>
-                                        <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                                        <i class="fa-solid fa-heart fa-2x fav-heart--color heart-animated"></i>
                                     </div>
                                 </div>
                             </div>
