--- a/menu-laNoteEnchantee.html
+++ b/menu-laNoteEnchantee.html
@@ -3,6 +3,8 @@
 
 <head>
         <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href=""/>
         <link rel="stylesheet" href="public/css/normalize.css"/>
         <link rel="stylesheet" href="public/css/style.css"/>
@@ -16,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-4x arrow--position"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
             <a href="#"><img src="/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
@@ -30,71 +32,71 @@
             <div class="name">
                 <h1 class="name__restaurant">La note enchantée</h1>
                 <div class="heart-container">
-                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
-                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                    <i class="fa-regular fa-heart fa-2x fav-heart--black"></i>
+                    <i class="fa-solid fa-heart fa-2x fav-heart--color heart-animated"></i>
                 </div>
             </div>
             <div class="menu">
                 <div class="firstPlate">
-                    <h3 class="menu--fonts menu--under">ENTRÉES</h3>
+                    <h3 class="menu--under">ENTRÉES</h3>
                     <div class="menu-pannel">
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Ravioles de foie gras</h4>
-                                    <p class="fonts--weight">Accompagnés de leur crème à la truffe</p>                                    </p>
+                                    <h4>Ravioles de foie gras</h4>
+                                    <p>Accompagnés de leur crème à la truffe</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
+                                    <p>25 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Caviar osciètre</h4>
-                                    <p class="fonts--weight">Sur blini à la farine de blé noir</p>
+                                    <h4>Caviar osciètre</h4>
+                                    <p>Sur blini à la farine de blé noir</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Homard et espuma de potiron</h4>
-                                    <p class="fonts--weight">Mariné aux zestes d'orange</p>
+                                    <h4>Homard et espuma de potiron</h4>
+                                    <p>Mariné aux zestes d'orange</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
+                                    <p>20 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Foie gras de canard cuit entier</h4>
-                                    <p class="fonts--weight">Confiture de figue et pain toasté</p>
+                                    <h4>Foie gras de canard cuit entier</h4>
+                                    <p>Confiture de figue et pain toasté</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -107,45 +109,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Noix de coquilles Saint-Jacques</h4>
-                                    <p class="fonts--weight">Sur lit de purée de céleri-rave</p>
+                                    <h4>Noix de coquilles Saint-Jacques</h4>
+                                    <p>Sur lit de purée de céleri-rave</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
+                                    <p>40 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Langoustine poêlée</h4>
-                                    <p class="fonts--weight">Purée de patate douce</p>
+                                    <h4>Langoustine poêlée</h4>
+                                    <p>Purée de patate douce</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Mijoté de queue de boeuf</h4>
-                                    <p class="fonts--weight">Et riz sauvage aux zestes de citron</p>
+                                    <h4>Mijoté de queue de boeuf</h4>
+                                    <p>Et riz sauvage aux zestes de citron</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
+                                    <p>44 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -158,45 +160,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Macaron noisette et chocolat</h4>
-                                    <p class="fonts--weight">Glace au caramel brun et sel de Guérande</p>
+                                    <h4>Macaron noisette et chocolat</h4>
+                                    <p>Glace au caramel brun et sel de Guérande</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
+                                    <p>18 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Baba au rhum revisité</h4>
-                                    <p class="fonts--weight">Avec son coulis de citron</p>
+                                    <h4>Baba au rhum revisité</h4>
+                                    <p>Avec son coulis de citron</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
+                                    <p>22 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Tarte au citron meringuée</h4>
-                                    <p class="fonts--weight">Déstructurée</p>
+                                    <h4>Tarte au citron meringuée</h4>
+                                    <p>Destructurée</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
+                                    <p>23 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
