--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -33,7 +33,7 @@
                 <h1 class="name__restaurant">La palette du goût</h1>
                 <div class="heart-container">
                     <i class="fa-regular fa-heart fa-2x fav-heart--black"></i>
-                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                    <i class="fa-solid fa-heart fa-2x fav-heart--color heart-animated"></i>
                 </div>
             </div>
             <div class="menu">
