--- a/menu-aLaFrancaise.html
+++ b/menu-aLaFrancaise.html
@@ -3,6 +3,8 @@
 
 <head>
         <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href=""/>
         <link rel="stylesheet" href="public/css/normalize.css"/>
         <link rel="stylesheet" href="public/css/style.css"/>
@@ -16,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-4x arrow--position"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
             <a href="#"><img src="/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
@@ -30,56 +32,56 @@
             <div class="name">
                 <h1 class="name__restaurant">À la française</h1>
                 <div class="heart-container">
-                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
-                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                    <i class="fa-regular fa-heart fa-2x fav-heart--black"></i>
+                    <i class="fa-solid fa-heart fa-2x fav-heart--color heart-animated"></i>
                 </div>
             </div>
             <div class="menu">
                 <div class="firstPlate">
-                    <h3 class="menu--fonts menu--under">ENTRÉES</h3>
+                    <h3 class="menu--under">ENTRÉES</h3>
                     <div class="menu-pannel">
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Tartare de poulpe acidulé</h4>
-                                    <p class="fonts--weight">Aux zestes d'orange</p>
+                                    <h4>Tartare de poulpe acidulé</h4>
+                                    <p>Aux zestes d'orange</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
+                                    <p>25 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Velouté de légumes d'antan</h4>
-                                    <p class="fonts--weight">Carotte, panais, topinambour</p>
+                                    <h4>Velouté de légumes d'antan</h4>
+                                    <p>Carotte, panais, topinambour</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Soupe à l'oignon</h4>
-                                    <p class="fonts--weight">Revisitée</p>
+                                    <h4>Soupe à l'oignon</h4>
+                                    <p>Revisitée</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
+                                    <p>20 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -92,45 +94,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Coquilles Saint-Jacques</h4>
-                                    <p class="fonts--weight">Accompagnées d'une purée de panais</p>
+                                    <h4>Coquilles Saint-Jacques</h4>
+                                    <p>Accompagnées d'une purée de panais</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
+                                    <p>40 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Magret de canard</h4>
-                                    <p class="fonts--weight">Et parmentier de pommes de terre</p>
+                                    <h4>Magret de canard</h4>
+                                    <p>Et parmentier de pommes de terre</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Pigeonneau d’Ille-et-Vilaine</h4>
-                                    <p class="fonts--weight">Sur son lit de gnocchis aux légumes</p>
+                                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                                    <p>Sur son lit de gnocchis aux légumes</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
+                                    <p>44 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -143,45 +145,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Pétales de violettes glacés</h4>
-                                    <p class="fonts--weight">Et purée de noisettes</p>
+                                    <h4>Pétales de violettes glacés</h4>
+                                    <p>Et purée de noisettes</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
+                                    <p>18 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Fondant au chocolat</h4>
-                                    <p class="fonts--weight">Revisité</p>
+                                    <h4>Fondant au chocolat</h4>
+                                    <p>Revisité</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
+                                    <p>22 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Millefeuille croustillant</h4>
-                                    <p class="fonts--weight">Myrtilles et pâte d’amande</p>
+                                    <h4>Millefeuille croustillant</h4>
+                                    <p>Myrtilles et pâte d’amande</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
+                                    <p>23 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
