--- a/menu-leDeliceDesSens.html
+++ b/menu-leDeliceDesSens.html
@@ -3,6 +3,8 @@
 
 <head>
         <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href=""/>
         <link rel="stylesheet" href="public/css/normalize.css"/>
         <link rel="stylesheet" href="public/css/style.css"/>
@@ -16,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-4x arrow--position"></i></a>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
             <a href="#"><img src="/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
@@ -30,56 +32,56 @@
             <div class="name">
                 <h1 class="name__restaurant">Le délice des sens</h1>
                 <div class="heart-container">
-                    <i class="fa-regular fa-heart fa-4x fav-heart--black"></i>
-                    <i class="fa-solid fa-heart fav-heart--color heart-animated"></i>
+                    <i class="fa-regular fa-heart fa-2x fav-heart--black"></i>
+                    <i class="fa-solid fa-heart fa-2x fav-heart--color heart-animated"></i>
                 </div>
             </div>
             <div class="menu">
                 <div class="firstPlate">
-                    <h3 class="menu--fonts menu--under">ENTRÉES</h3>
+                    <h3 class="menu--under">ENTRÉES</h3>
                     <div class="menu-pannel">
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Tartare de thon</h4>
-                                    <p class="fonts--weight">Assaisonné au yuzu</p>
+                                    <h4>Tartare de thon</h4>
+                                    <p>Assaisonné au yuzu</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">25€</p>
+                                    <p>25 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Bouchée de homard croustillant</h4>
-                                    <p class="fonts--weight">Et sa farandole de petits légumes</p>
+                                    <h4>Bouchée de homard croustillant</h4>
+                                    <p>Et sa farandole de petits légumes</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Velouté de cèpes</h4>
-                                    <p class="fonts--weight">Aux truffes</p>
+                                    <h4>Velouté de cèpes</h4>
+                                    <p>Aux truffes</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">20€</p>
+                                    <p>20 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -92,45 +94,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Poulet rôti aux herbes de Provence</h4>
-                                    <p class="fonts--weight">Et sa crème de truffe</p>
+                                    <h4>Poulet rôti aux herbes de Provence</h4>
+                                    <p>Et sa crème de truffe</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">40€</p>
+                                    <p>40 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Langouste rôtie</h4>
-                                    <p class="fonts--weight">Et ses légumes de saison</p>
+                                    <h4>Langouste rôtie</h4>
+                                    <p>Et ses légumes de saison</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">35€</p>
+                                    <p>35 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Côte de boeuf Angus</h4>
-                                    <p class="fonts--weight">Et sa purée de panais</p>
+                                    <h4>Côte de boeuf Angus</h4>
+                                    <p>Et sa purée de panais</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">44€</p>
+                                    <p>44 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
@@ -143,45 +145,45 @@
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Farandole de desserts</h4>
-                                    <p class="fonts--weight">Du chef</p>
+                                    <h4>Farandole de desserts</h4>
+                                    <p>Du chef</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">18€</p>
+                                    <p>18 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Crème brulée</h4>
-                                    <p class="fonts--weight">Revisitée</p>
+                                    <h4>Crème brulée</h4>
+                                    <p>Revisitée</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">22€</p>
+                                    <p>22 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
 
                         <div class="plate">
                             <div class="plate-details">
                                 <div class="plate__txt">
-                                    <h4 class="text--sizing fonts--size fonts--margin">Tiramisu </h4>
-                                    <p class="fonts--weight">À la noisette</p>
+                                    <h4>Tiramisu</h4>
+                                    <p>À la noisette</p>
                                 </div>
                                 <div class="plate__price">
-                                    <p class="text--sizing fonts--size fonts--margin fonts--bold">23€</p>
+                                    <p>23 €</p>
                                 </div>
                             </div>
                             <div class="plate__valid">
-                                <i class="fa-solid fa-circle-check fa-4x"></i>
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
                         </div>
                     </div>
