--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 
 
     <footer>
+        <div class="footer-links">
         <h3 class="logoWhite">ohmyfood</h3>
         <ul>
             <li>
@@ -220,7 +221,7 @@
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-        </ul>
+        </ul></div>
     </footer>
 </body>
 
