--- a/menu-laNoteEnchantee.html
+++ b/menu-laNoteEnchantee.html
@@ -24,9 +24,10 @@
     </header>
 
     <main>
-        <section class="profil">
+        <section>
+        <div class="profil">
             <img class="photo__profil" src="/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo"/>
-        </section>
+        </div></section>
 
         <section id="carte" class="box--offset box--rounded box--color box--position">
             <div class="name">
