--- a/menu-laNoteEnchantee.html
+++ b/menu-laNoteEnchantee.html
@@ -217,18 +217,19 @@
     
 
     <footer>
+        <div class="footer-links">
         <h3 class="logoWhite">ohmyfood</h3>
         <ul>
             <li>
                 <a href="#">
                     <i class="fa-solid fa-utensils"></i>
-                     Proposer un restaurant
+                    Proposer un restaurant
                 </a>
             </li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-        </ul>
+        </ul></div>
     </footer>
 </body>
 
