--- a/menu-leDeliceDesSens.html
+++ b/menu-leDeliceDesSens.html
@@ -202,7 +202,7 @@
 
     <footer>
         <div class="footer-links">
-        <h3 class="logoWhite">ohmyfoodg</h3>
+        <h3 class="logoWhite">ohmyfood</h3>
         <ul>
             <li>
                 <a href="#">
