--- a/menu-leDeliceDesSens.html
+++ b/menu-leDeliceDesSens.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
+            <a href="https://p0b0ck.github.io/OC_P03_ohMyFood/"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
             <a href="#"><img src="./img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
