--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -19,7 +19,7 @@
     <header>
         <div class="logo">
             <a href="https://p0b0ck.github.io/OC_P03_ohMyFood/"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
-            <a href="#"><img src="./img/Logo/ohmyfood.png"/></a>
+            <a href="#"><img src="https://p0b0ck.github.io/OC_P03_ohMyFood/img/Logo/ohmyfood.png"/></a>
         </div>
     </header>
 
