--- a/menu-leDeliceDesSens.html
+++ b/menu-leDeliceDesSens.html
@@ -25,7 +25,7 @@
 
     <main>
         <section class="profil">
-            <img class="photo__profil" src="/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo"/>
+            <img class="photo__profil" src="https://p0b0ck.github.io/OC_P03_ohMyFood/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo"/>
         </section>
 
         <section id="carte" class="box--offset box--rounded box--color box--position">
