--- a/menu-laNoteEnchantee.html
+++ b/menu-laNoteEnchantee.html
@@ -26,7 +26,7 @@
     <main>
         <section>
         <div class="profil">
-            <img class="photo__profil" src="/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo"/>
+            <img class="photo__profil" src="https://p0b0ck.github.io/OC_P03_ohMyFood/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo"/>
         </div></section>
 
         <section id="carte" class="box--offset box--rounded box--color box--position">
