--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="" />
+    <link rel="shortcut icon" type="image/png" />
     <link rel="stylesheet" href="public/css/normalize.css" />
     <link rel="stylesheet" href="public/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
 
     <header>
         <div class="logo">
-            <a href="#"><img src="img/Logo/ohmyfood.png" /></a>
+            <a href="#"><img src="img/Logo/ohmyfood.png" alt="Logo ohmyfood" /></a>
         </div>
     </header>
 
@@ -48,9 +48,7 @@
             <div class="reservation">
                 <h2 class="margin-bot">Réservez le menu qui vous convient</h2>
                 <p class="margin-bot">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <a href="#restaurants">
                     <button class="btn--gradiant btn--rouned">Explorer nos restaurants</button>
-                </a>
             </div>
         </section>
 
@@ -204,7 +202,6 @@
                 </div>
             </div>
         </section>
-        </span>
     </main>
 
 
