--- a/menu-aLaFrancaise.html
+++ b/menu-aLaFrancaise.html
@@ -18,7 +18,7 @@
     <header>
         <div class="logo">
             <a href="https://p0b0ck.github.io/OC_P03_ohMyFood/"><i class="fa-solid fa-arrow-left fa-xl arrow--position"></i></a>
-            <a href="#"><img src="https://p0b0ck.github.io/OC_P03_ohMyFood/img/Logo/ohmyfood.png"/></a>
+            <a href="#"><img src="https://p0b0ck.github.io/OC_P03_ohMyFood/img/Logo/ohmyfood.png" alt="Logo ohmyfood" /></a>
         </div>
     </header>
 
@@ -192,9 +192,7 @@
         </section>
 
         <section class="command">
-            <a href="#">
                 <button class="btn--gradiant btn--rouned">Commander</button>
-            </a>
         </section>
     </main>
     
